Tue Dec 08 02:21:35 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_translate): at the end of constructing an iseq,
	  call RubyVM::InstructionSequence.translate(iseq) if this method
	  is defined. If the return value is also an object of
	  RubyVM::InstructionSequence, then use it instead of created one.

	  For example, this method is useful to test iseq dumper/loader
	  such as RubyVM::InstructionSequence#to_a and rb_iseq_load().

	  Because this method is for such internal experimental usage,
	  the interface is not matured. For example, this interface has
	  no extensibility. Two or more translaters can not run
	  simultaneously.

	  So that we don't guarantee future compatibility of this method.
	  Basically, do not use this method.

Tue Dec  8 01:57:13 2015  Aaron Patterson <tenderlove@ruby-lang.org>

	* ext/psych/*: update psych to 2.0.16
	* test/psych/*: ditto

Mon Dec  7 23:45:20 2015  Koichi Sasada  <ko1@atdot.net>

	* string.c: introduce String#+@ and String#-@ to control
	  String mutability.
	  [Feature #11782]

Mon Dec  7 23:39:49 2015  Ben Miller  <bjmllr@gmail.com>

	* parse.y: add heredoc <<~ syntax.  [Feature #9098]

Mon Dec  7 23:06:16 2015  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* prelude.rb (IO#read_nonblock): [DOC] add missing options to
	  call-seq.  [ruby-core:71627] [Bug #11730]

Mon Dec  7 15:50:50 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* .gitignore: added cygruby*.def for Cygwin

Sun Dec  6 19:52:31 2015  Eric Wong  <e@80x24.org>

	* include/ruby/intern.h (rb_autoload): deprecate
	* internal.h (rb_autoload_str): declare
	* load.c (rb_mod_autoload): use rb_autoload_str
	* variable.c (rb_autoload): become compatibility wrapper
	  (rb_autoload_str): hoisted out from old rb_autoload
	  [ruby-core:71369] [Feature #11664]

Sun Dec  6 19:02:55 2015  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* configure.in: add missing x.

Sun Dec  6 18:25:22 2015  NAKAMURA Usaku  <usa@ruby-lang.org>
